--- a/composestateevents/build.gradle
+++ b/composestateevents/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 android {
     namespace 'de.palm.composestateevents'
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         minSdk 21
-        targetSdk 31
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -29,13 +29,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_compiler_version
         kotlinCompilerVersion kotlin_version
     }
 }
