--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,25 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_compiler_version
+        kotlinCompilerVersion kotlin_version
+    }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'com.google.android.material:material:1.6.1'
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation project(':compose-state-events')
+
 }
