--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ComposeStateEvents"
 include ':app'
-include ':composestateevents'
+include ':compose-state-events'
