--- a/compose-state-events/build.gradle
+++ b/compose-state-events/build.gradle
@@ -11,6 +11,7 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
+        versionName "1.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -42,7 +43,7 @@ android {
     buildFeatures {
         compose true
     }
-    
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_compiler_version
         kotlinCompilerVersion kotlin_version
@@ -60,7 +61,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.leonard-palm'
                 artifactId = 'compose-state-events'
-                version = '1.1.0'
+                version = '1.2.0'
             }
         }
     }
