--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 24
         targetSdk 33
         versionCode 1
-        versionName "2.1.1"
+        versionName "2.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,6 +45,9 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'com.google.android.material:material:1.9.0'
+
+
+    implementation("androidx.navigation:navigation-compose:2.6.0")
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.activity:activity-compose:1.7.2'
