--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,21 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.21'
-        compose_version = '1.4.3'
-        compose_compiler_version = '1.4.7'
+        kotlin_version = '2.2.21'
+        compose_version = '1.9.5'
+        compose_compiler_version = '1.5.15'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.android.tools.build:gradle:8.13.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin.plugin.compose:org.jetbrains.kotlin.plugin.compose.gradle.plugin:$kotlin_version"
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
