--- a/compose-state-events/build.gradle
+++ b/compose-state-events/build.gradle
@@ -2,15 +2,16 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'maven-publish'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
     namespace 'de.palm.composestateevents'
-    compileSdk 34
+    compileSdkVersion 36
 
     defaultConfig {
         minSdk 21
-        targetSdk 34
+        targetSdk 36
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -59,7 +60,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.leonard-palm'
                 artifactId = 'compose-state-events'
-                version = '2.1.1'
+                version = '2.3.0'
             }
         }
     }
